# ugtext_processor

./: .gitignore  LICENSE  README.md  path_config.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: workflow.yml
scripts/: build.sh  github
tests/normalizer/: test_abbreviation.py  test_currency.py  test_date_norm.py  test_num2str.py  test_num_norm.py  test_punctuation.py
tests/phonemizer/: test_tts_ug_phonemizer.py  test_ug_phonemizer.py
tests/tokenizer/: test_bpe_tokenizer.py  test_char_tokenizer.py  test_sentencepiece_tokenizer.py  test_word_tokenizer.py  test_wordpiece_tokenizer.py
ugtext_processer/normalizer/: date_norm.py  num2str.py  num_norm.py
ugtext_processer/tokenizer/: bpe_tokenizer.py  char_tokenizer.py  sentencepiece_tokenizer.py  tokenizer_factory.py  word_tokenizer.py  wordpiece_tokenizer.py
ugtext_processor/normalizer/: abbreviation.py  currency.py  date_norm.py  num_norm.py  punctuation.py  rule_registry.py
ugtext_processor/phonemizer/: __init__.py  ug_phonemizer.py
ugtext_processor/tokenizer/: base_tokenizer.py  bpe_tokenizer.py  char_tokenizer.py  sentencepiece_tokenizer.py  tokenizer_factory.py  word_tokenizer.py  wordpiece_tokenizer.py
