[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ugtext_processer"
version = "0.1.5"
authors = [
    { name = "uyplayer", email = "uyplayer@outlook.com" },
]
description = "text processing for uyghur script"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pytest",
    "epitran",
    "sentencepiece",
    "tokenizers"

]

[tool.setuptools]
packages = ["find:"]
[project.optional-dependencies]
test = [
    "pytest",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["ugtext_processer*"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
