[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ugtext_processor"
version = "0.1.8"
authors = [
    { name = "uyplayer", email = "uyplayer@outlook.com" },
]
license = { file = "LICENSE" }
description = "text processing for uyghur script"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pytest",
    "epitran",
    "sentencepiece",
    "tokenizers"

]

[project.urls]
Homepage = "https://github.com/uyplayer/ugtext_processor"
Repository = "https://github.com/uyplayer/ugtext_processor"
Issues = "https://github.com/uyplayer/ugtext_processor/issues"

[project.optional-dependencies]
test = [
    "pytest",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["ugtext_processor*"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
